remove sorting and add own string building